# so

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  appveyor.yml  example.txt  roadmap.md
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump_brew_formula.yml  ci.yml  release.yaml
benches/: html_parsing.rs  md_parsing.rs  parsing.rs
ci/: before_deploy.ps1  before_deploy.sh  script.sh
docs/: install.sh
src/: cli.rs  config.rs  error.rs  lib.rs  macros.rs  main.rs  stackexchange.rs  term.rs  utils.rs
src/stackexchange/: api.rs  local_storage.rs  mod.rs  scraper.rs  search.rs
src/tui/: app.rs  entities.rs  enumerable.rs  list.rs  markdown.hs  markdown.rs  mod.rs  views.rs
test/: .gitattributes
test/duckduckgo/: bad-user-agent.html  exit-vim.html  tagged.html
test/google/: exit-vim.html  parsing-q.html
themes/: default.toml  tomorrow.toml  tomorrow_night_80s.toml
