[package]
name = "so"
version = "0.4.5"
license = "MIT"
description = "A terminal interface for StackOverflow"
readme = "README.md"
homepage = "https://github.com/samtay/so"
repository = "https://github.com/samtay/so"
keywords = ["cli", "tui", "stackoverflow", "stackexchange"]
categories = ["command-line-utilities"]
authors = ["Sam Tay <sam.chong.tay@pm.me>"]
edition = "2018"
include = ["src/**/*", "themes/*", "LICENSE", "README.md", "CHANGELOG.md"]

[badges]
appveyor = { repository = "samtay/so", branch = "master", service = "github" }
travis-ci = { repository = "samtay/so", branch = "master" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "html_parsing"
path = "benches/html_parsing.rs"
harness = false

[[bench]]
name = "md_parsing"
path = "benches/md_parsing.rs"
harness = false

[dependencies]
thiserror = "1.0"
clap = "2.33"
directories = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

reqwest = { version = "0.11", features = ["gzip", "json"] }
tokio = { version = "1.7", features = ["full"] }
futures = "0.3"
rayon = "1.5"

percent-encoding = "2.1"
scraper = "0.12"

lazy_static = "1.4"
minimad = "0.8"
termimad = "0.13"

crossterm = { version = "0.20", features = ["event-stream"] }
pulldown-cmark = { version = "0.8", default-features = false }

# temporary to fix https://github.com/Lymia/enumset/issues/17
syn = "=1.0.57"

[dependencies.cursive]
version =  "0.17"
default-features = false
features = ["toml"]

[features]
default = ["cursive/termion-backend"]
windows = ["cursive/crossterm-backend"]
termion-backend = ["cursive/termion-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
