[package]
name = "so"
version = "0.4.8"
license = "MIT"
description = "A terminal interface for StackOverflow"
readme = "README.md"
homepage = "https://github.com/samtay/so"
repository = "https://github.com/samtay/so"
keywords = ["cli", "tui", "stackoverflow", "stackexchange"]
categories = ["command-line-utilities"]
authors = ["Sam Tay <sam.chong.tay@pm.me>"]
edition = "2018"
include = ["src/**/*", "themes/*", "LICENSE", "README.md", "CHANGELOG.md"]

[badges]
appveyor = { repository = "samtay/so", branch = "master", service = "github" }
travis-ci = { repository = "samtay/so", branch = "master" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "html_parsing"
path = "benches/html_parsing.rs"
harness = false

[[bench]]
name = "md_parsing"
path = "benches/md_parsing.rs"
harness = false

[dependencies]
anyhow = "1.0"
clap = "2.33"
crossterm = { version = "0.23", features = ["event-stream"] }
directories = "2.0"
futures = "0.3"
lazy_static = "1.4"
minimad = "0.9"
percent-encoding = "2.1"
pulldown-cmark = { version = "0.9", default-features = false }
rayon = "1.5"
reqwest = { version = "0.11", features = ["gzip", "json"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
termimad = "0.20"
thiserror = "1.0"
tokio = { version = "1.20", features = ["full"] }
webbrowser = "0.7"

[dependencies.cursive]
version =  "0.18"
default-features = false
features = ["toml"]

[features]
default = ["cursive/termion-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
